# WallpaperEngine

./: .gitignore  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.text  build.yml
assets/: test.rs
public/: icon.icns  wallpaper.html
src/: App.css  App.tsx  globals.css  main.rs  main.tsx
src-tauri/: .gitignore  Cargo.toml  cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop_injection.rs  lib.rs  main.rs  models.rs  mpv_player.rs  process_manager.rs  scraper.rs  storage.rs  video_wallpaper.rs  video_wallpaper_linux.rs  wmf_player.rs
src-tauri/src/commands/: mod.rs  search.rs  settings.rs  wallpaper.rs
src-tauri/src/linux/: main.rs  mpv_player.rs  video_wallpaper_linux.rs
src-tauri/src/player/: desktop_injection.rs  main.rs  os_version.rs  wmf_player.rs
src-tauri/src/windows/: desktop_injection.rs  main.rs  mpv_player.rs
src/components/: CustomTitleBar.tsx  ExpandedHeader.tsx  ImageCard.tsx  ImageModal.tsx  LaxentaLogo.tsx  LoadingScreen.tsx  LoadingState.tsx  Newnavigation.tsx  SnowEffect.tsx  StoreCard.tsx  WallpaperCard.tsx  WelcomeModal.tsx  icons.tsx  titlebar.tsx
src/components/headers/: CompactHeader.tsx  ExpandedHeader.tsx
src/constants/: wallpapers.ts
src/pages/: HomePage.tsx  LibraryPage.tsx  SettingsPage.tsx  StorePage.tsx
src/types/: wallpaper.ts
