[package]
name = "wallpaper-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-opener = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.21"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
regex = "1.11"
urlencoding = "2.1"
wallpaper = "3.2"  # Add this for wallpaper setting

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
