[package]
name = "wallpaperengine"
version = "1.1.0"
description = "A wallpaper engine"
authors = ["LaxentaInc"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
url = "2"
rand = "0.8"
regex = "1"
urlencoding = "2"
wallpaper = "3.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
