[package]
name = "wallpaperengine"
version = "2.2.1"
description = "WallpaperEngine"
authors = ["LaxentaInc"]
edition = "2021"
default-run = "wallpaperengine"

# Main Tauri application
[[bin]]
name = "wallpaperengine"
path = "src/main.rs"

# Separate wallpaper player process (DWM-isolated) - win only
[[bin]]
name = "wallpaper-player"
path = "src/windows/main.rs"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-desktop-underlay = "0.2.0"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
url = "2"
rand = "0.8"
regex = "1"
urlencoding = "2"
wallpaper = "3.2"
lazy_static = "1.4"
which = "6"
rust-embed = "8.9"
thread = "0.0.1"
md5 = "0.7"
os-version = "0.2.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
windows-implement = "0.60.2"
winreg = "0.52"
windows-core = "0.61"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
